making all httr2 and dplyr function calls explicit instead of imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: deltabreedquery
 Type: Package
-Title: Basic R tools to pull data from DeltaBreed
+Title: Fetching Data from DeltaBreed via BrAPI Calls
 Version: 0.1.0
 Author: Tyr Wiesner-Hanks
-Maintainer: Tyr Wiesner-Hanks <tw372@cornell.edu>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Maintainer: Tyr Wiesner-Hanks <twiesnerhanks@ufl.edu>
+Description: This library provides a small number of exposed functions to pull
+    data from DeltaBreed in as close a format and structure as possible to how it appears
+    on DeltaBreed and/or on the XLSX files used for data import and export.
+    Currently, it only works for germplasm, observations, and experiment/environments.
+License: Apache License 2.0
 Encoding: UTF-8
 LazyData: true
 Suggests: 
@@ -14,3 +16,8 @@ Suggests:
 Config/testthat/edition: 3
 Depends: 
     R (>= 3.5)
+Imports:
+    httr2,
+    dplyr,
+    tidyr
+RoxygenNote: 7.3.3
